Compiles with latest scummvm

--- a/backends/platform/dc/Makefile
+++ b/backends/platform/dc/Makefile
@@ -49,6 +49,7 @@ ENABLE_AGI = $(ENABLED)
 ENABLE_AGOS = $(ENABLED)
 ENABLE_CINE = $(ENABLED)
 ENABLE_CRUISE = $(ENABLED)
+ENABLE_CRUX = $(ENABLED)
 ENABLE_DRASCULA = $(ENABLED)
 ENABLE_GOB = $(ENABLED)
 ENABLE_GROOVIE = $(ENABLED)
